--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="nav-items" class="hidden flex sm-w-100pc flex-column md-flex md-flex-row md-justify-end items-center">
             <a href="#home" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Home</a>
             <a href="#What am I?" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">What am I?</a>
-            <a href="IM PRO STUPID" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Resume</a>
+            <a href="https://github.com/Candl3-ca/Candl3-ca.github.io/raw/master/assets/js/Newest_resume.pdf" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Resume</a>
           </div>
       </nav>
   
@@ -155,6 +155,7 @@
                                 <a href="https://github.com/Candl3-ca/SteamVR_opVR.git" class="mt-10 button bg-black fs-s3 white no-underline">Learn more</a>
                             </div>
                         </div>
+                        
     </section>
     
     <!-- testimonials -->
