--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <a href="#home" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Home</a>
             <a href="#What am I?" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">What am I?</a>
             <a href="https://www.linkedin.com/in/fadi-samaan-8907b2261/" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">LinkedIn</a>
-          </div>
-            <a href="https://github.com/Candl3-ca/Candl3-ca.github.io/raw/master/assets/js/Newest_resume.pdf" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Resume</a>
+            <a href="https://github.com/Candl3-ca/Candl3-ca.github.io/blob/master/assets/js/Resume1.2.pdf" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Resume</a>
           </div>
       </nav>
   
