--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body class="bg-black muli">
+    <p id="consoleText"></p>
     <nav class="w-100pc flex flex-column md-flex-row md-px-10 py-5 bg-black">
         <div class="flex justify-between">
             <a href="#" class="flex items-center p-2 mr-4 no-underline">
@@ -28,13 +29,17 @@
         <div id="nav-items" class="hidden flex sm-w-100pc flex-column md-flex md-flex-row md-justify-end items-center">
             <a href="#home" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Home</a>
             <a href="#What am I?" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">What am I?</a>
-            <a href="https://github.com/Candl3-ca/Candl3-ca.github.io/raw/master/assets/js/Newest_resume.pdf" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Resume</a>
+            <a href="https://github.com/Candl3-ca/Candl3-ca.github.io/blob/master/assets/js/no_name_Resume_05-03-2023-21-27-37.pdf" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Resume</a>
           </div>
       </nav>
   
       <!-- hero section -->
     <section id="home" class="flex justify-start items-center">
-            <div>
+        <!--this should use the new functions in the script.js file and should not take a lot of space-->
+        <p id="H"> Free your mind, and the rest will follow</p>
+    </section>
+    <section>
+        <div>
                 <!--<h1 class="white fs-l3 lh-2 md-fs-xl1 md-lh-1 fw-900 ">Serve Your <br />Website Fast</h1> -->
                 <div class="Wrapper">
                     <div class="static-text"> I'm a </div>
@@ -50,6 +55,7 @@
     </section>
 
     <!-- features -->
+    
     <section id="What am I?" class="p-10 md-p-l5">
         <div class="flex flex-column md-flex-row mx-auto">
             <div class="w-100pc md-w-40pc">
@@ -58,7 +64,7 @@
                             data-feather="inbox" class="w-l5"></i></div>
                     <h4 class="white fw-600 fs-m3 mb-5">About me</h4>
                     <div class="indigo-lightest fw-600 fs-m1 lh-3 opacity-50">A 19 year old, from Canada. 
-                    Been prograaming since I was 14. Fell in love with VR and creating games. I center all my projects to improve quality of life in VR </div>
+                    Been programing since I was 14. Fell in love with VR and creating games. I center all my projects to improve quality of life in VR </div>
                 </div>
             </div>
             <div class="w-100pc md-w-40pc">
