--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <!-- hero section -->
     <section id="home" class="flex justify-start items-center">
         <!--this should use the new functions in the script.js file and should not take a lot of space-->
-        <p id="H"> Free your mind, and the rest will follow</p>
+        <!-- <p id="H"> Free your mind, and the rest will follow</p> -->
     </section>
     <section>
         <div>
