--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="nav-items" class="hidden flex sm-w-100pc flex-column md-flex md-flex-row md-justify-end items-center">
             <a href="#home" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Home</a>
             <a href="#What am I?" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">What am I?</a>
-            <a href="https://github.com/Candl3-ca/Candl3-ca.github.io/blob/master/assets/js/NNRS.pdf" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Resume</a>
+            <a href="https://flowcv.com/resume/13w8dkcotf" class="fs-s1 mx-3 py-3 indigo no-underline hover-underline">Resume</a>
           </div>
       </nav>
   
