--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       </nav>
   
       <!-- hero section -->
-    <section id="home" class="flex justify-start items-center">
+    <!-- <section id="home" class="flex justify-start items-center">
       <!--  this should use the new functions in the script.js file and should not take a lot of space -->
-        <p id="H"> Free your mind, and the rest will follow</p>
-    </section> 
+        <!-- <p id="H"> Free your mind, and the rest will follow</p> -->
+    </section> -->
     <section>
         <div>
                 <!-- <h1 class="white fs-l3 lh-2 md-fs-xl1 md-lh-1 fw-900 ">Serve Your <br />Website Fast</h1> -->
