--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <!-- hero section -->
     <!-- <section id="home" class="flex justify-start items-center">
       <!--  this should use the new functions in the script.js file and should not take a lot of space -->
-        <!-- <p id="H"> Free your mind, and the rest will follow</p> -->
+        <!-- <p id="H"> Free your mind, and the rest will follow</p> 
     </section> -->
     <section>
         <div>
@@ -271,7 +271,7 @@
     </section>
     
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
